Set up styling for home page after login and class registration

--- a/css/style.css
+++ b/css/style.css
@@ -65,14 +65,16 @@ html, body{
 	font-size: 3em;
 	text-decoration: none;
 	word-spacing:-0.25em;
-	margin-top: 0.8em;
+	margin-top: -0.8em;
   }
 
 
 
-.headwrapper .name .first{
+.headwrapper .name .first, 
+.headwrapper .name .third{
 	color:white;
 	text-decoration: none;
+	
 	
 }
 
@@ -81,11 +83,6 @@ html, body{
 	text-decoration: none;
 
 
-}
-
-.headwrapper .name .third{
-	color:white;
-	text-decoration: none;
 }
 
 .headwrapper #nav{
@@ -118,7 +115,8 @@ body{
 	font-size: 4em;
 	color: #C11B17;
 	text-align:center;
-	Padding: 10px;
+	margin-top: 0.5em;
+	margin-bottom: 0.5em;
 }
 .form{
 	  margin: 0 auto;
@@ -142,6 +140,7 @@ label {
     width: 8em;
 	  text-align: right;
 }
+
 
 /* Tablet Landscape */
 @media screen and (max-width: 1060px) {
