--- a/css/screen.css
+++ b/css/screen.css
@@ -21,6 +21,9 @@ html, body{
 	background-color:#D1D0CE;
 	font-family:Roboto, sans-serif;
 }
+.header img{
+ 	background-color:white;
+}
 header{
 	background-color:#222;
 }
@@ -29,7 +32,7 @@ h1.home{
 	color:#aaa;
 	font-size:3em;
 	position: absolute;
-	margin-left:2.5em;
+	margin-left:4em;
 	margin-top:0.5em;
 }
 
